feat(backend): implement unified error handling and pydantic validation
- Refactor ErrorCode to include error messages
- Add Pydantic schemas for auth endpoints (Login, Register, SendCode)
- Add validation decorator for automatic request body validation
- Update Auth API to use new validation and error handling mechanism
- Add pydantic and email-validator dependencies

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,11 @@
 Flask>=3.0.0
 flask-cors
+flask-jwt-extended
+flask-mail
 gunicorn
 python-dotenv
+pydantic
+email-validator
 langchain
 openai
 celery
