--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,7 @@ FLASK_APP=backend/run.py
 FLASK_CONFIG=development
 FLASK_DEBUG=1
 SECRET_KEY=your-secret-key-here
+JWT_SECRET_KEY=your-jwt-secret-key-here
 
 # 缓存配置
 REDIS_URL=redis://localhost:6379/0
@@ -10,3 +11,11 @@ REDIS_URL=redis://localhost:6379/0
 # 数据库配置
 # 格式: postgresql://username:password@localhost:5432/database_name
 DATABASE_URL=postgresql://username:password@localhost:5432/documind
+
+# 邮件配置
+MAIL_SERVER=smtp.example.com
+MAIL_PORT=587
+MAIL_USE_TLS=true
+MAIL_USERNAME=your-email@example.com
+MAIL_PASSWORD=your-password
+MAIL_DEFAULT_SENDER=your-email@example.com
