--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
+    "@reduxjs/toolkit": "^2.11.2",
+    "ahooks": "^3.9.6",
+    "antd": "^6.2.3",
     "autoprefixer": "^10.4.24",
     "axios": "^1.13.4",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
+    "react-use": "^17.6.0",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
