build: 添加各模块Dockerfile及相关构建配置

--- a/ai-engine/Dockerfile
+++ b/ai-engine/Dockerfile
@@ -2,9 +2,21 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PIP_NO_CACHE_DIR=1
+
+# Install system dependencies if needed (e.g. for some python packages)
+# RUN apt-get update && apt-get install -y build-essential && rm -rf /var/lib/apt/lists/*
+
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 COPY . .
 
+# Expose port (assuming 8000 for FastAPI/Flask)
+EXPOSE 8000
+
+# Run with Gunicorn/Uvicorn for production
 CMD ["python", "run.py"]
