feat(infra): 添加MySQL/Redis部署及后端生产环境配置

--- a/deploy/k8s/backend.yaml
+++ b/deploy/k8s/backend.yaml
@@ -22,6 +22,35 @@ spec:
         env:
         - name: SPRING_PROFILES_ACTIVE
           value: "prod"
+        - name: DB_HOST
+          value: "documind-mysql"
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: documind-secrets
+              key: db-password
+        - name: REDIS_HOST
+          value: "documind-redis"
+        - name: REDIS_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: documind-secrets
+              key: redis-password
+        - name: JWT_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: documind-secrets
+              key: jwt-secret
+        - name: MAIL_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: documind-secrets
+              key: mail-username
+        - name: MAIL_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: documind-secrets
+              key: mail-password
         resources:
           requests:
             memory: "256Mi"
